--- a/build.gradle
+++ b/build.gradle
@@ -67,33 +67,33 @@ def customizePom(pom) {
 
         root.children().last() + {
             resolveStrategy = DELEGATE_FIRST
-            description = 'A simple library for downloading and parsing the schedule of the selected department and group.'
-            name = 'bmstu-schedule-loader'
-            url = 'https://github.com/RomanQed/bmstu-schedule-loader'
+            description 'A simple library for downloading and parsing the schedule of the selected department and group.'
+            name 'bmstu-schedule-loader'
+            url 'https://github.com/RomanQed/bmstu-schedule-loader'
             organization {
-                name = 'com.github.romanqed'
-                url = 'https://github.com/RomanQed/'
+                name 'com.github.romanqed'
+                url 'https://github.com/RomanQed/'
             }
             issueManagement {
-                system = 'GitHub'
-                url = 'https://github.com/RomanQed/bmstu-schedule-loader/issues'
+                system 'GitHub'
+                url 'https://github.com/RomanQed/bmstu-schedule-loader/issues'
             }
             licenses {
                 license {
-                    name = 'MIT License'
-                    url = 'https://github.com/RomanQed/bmstu-schedule-loader/blob/main/LICENSE'
+                    name 'MIT License'
+                    url 'https://github.com/RomanQed/bmstu-schedule-loader/blob/main/LICENSE'
                 }
             }
             scm {
-                url = 'https://github.com/RomanQed/bmstu-schedule-loader'
-                connection = 'scm:https://github.com/RomanQed/bmstu-schedule-loader.git'
-                developerConnection = 'scm:https://github.com/RomanQed/bmstu-schedule-loader.git'
+                url 'https://github.com/RomanQed/bmstu-schedule-loader'
+                connection 'scm:https://github.com/RomanQed/bmstu-schedule-loader.git'
+                developerConnection 'scm:https://github.com/RomanQed/bmstu-schedule-loader.git'
             }
             developers {
                 developer {
                     id 'dev'
-                    name = 'RomanQed'
-                    email = 'gbakaldin@gmail.com'
+                    name 'RomanQed'
+                    email 'gbakaldin@gmail.com'
                 }
             }
         }
